tests/tc/pos/obj03.js
/*@ foo :: (<l>)/l |-> {a: number, b: boolean} => <l>/l |-> { a: number } */
function foo(x) {
  return x;
}

